// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

01/26/2010
	r159 [Jobbie]
	* Minor fix to Arms Cannon to behave same on official. Should be ground target skills.
	* Minor fix on Repair skill which cannot heal another targets mado.
	* Minor fix to Analyze skill the animation should be on the target not on the caster.

	r156 [pakpil]
	* Fixed pc_skillup that wasn't working propertly with all extended class.

	r154 [pakpil]
	* Added missing code in r152.
	* Fix in SC_BLOODYLUST, SC_MAELSTROM and SC_CHAOSPANIC to adjust these skills to the official behavior.
		- SC_BLOODYLUST has its own SI and its effect disappears when you left the skill range. No status icon.
		- SC_CHAOSPANIC uses OPT2_SIGNUMCRUCIS.
		- SC_MAELSTROM don't shows the skill name when absorb magics.

01/25/2010
	r152 [pakpil]
	* Added SC_MAELSTROM skill.
	* Fixed SC_MANHOLE that was allow skill attacks to targets under this status. Bug report 70.

01/25/2010
	r150 [pakpil]
	* Added SC_FATALMENACE skill working as intended.
	* Minor fix in SC_BLOODYLUST skill.

01/25/2010
	r149 [Jobbie]
	* Added Mechanic Skills NC_HOVERING and NC_ANALYZE working as intended.

01/24/2010
	r147 [Jobbie]
	* Minor fix on NC_REPAIR requirements.

	r146 [Jobbie]
	* Added Mechanic Skills working as intended.
	- NC_MADOLICENCE, NC_BOOSTKNUCKLE, NC_PILEBUNKER, NC_VULCANARM, NC_FLAMELAUNCHER, NC_COLDSLOWER
	- NC_ARMSCANNON, NC_ACCELERATION, NC_SELFDESTRUCTION, NC_INFRAREDSCAN, NC_REPAIR, NC_TRAININGAXE,
	- NC_RESEARCHFE, NC_AXEBOOMERANG, NC_POWERSWING, NC_AXETORNADO.
	* Minor fix to additional movement speed on when mounting animals.
	* Minor fix to Adoramus which don't have duration when abnormal status affects.

	r145 [pakpil]
	* Merged pc_isriding function from stable.
	* Minor fix in clif_addskill that was cause some problems with SC_REPRODUCE and RG_PLAGIARISM.
	* Fixed mounting dragons that was causing uses dragons skills without dragon.