@@ -1414,27 +1414,27 @@
 
 //==== Sorcerer skills =====================
 //-- SO_FIREWALK
-2443,1000,1000,0,0,12000:14000:16000:18000:20000,0
+2443,1000,1000,0,0,12000,0
 //-- SO_ELECTRICWALK
-2444,1000,1000,0,0,12000:14000:16000:18000:20000,0
+2444,1000,1000,0,0,12000,0
 //-- SO_EARTHGRAVE
 2446,2500,1000,5000,0,3000,10000
 //-- SO_DIAMONDDUST
-2447,2500,1000,5000,0,1000,20000
+2447,6000,1000,5000,0,1000,20000
 //-- SO_POISON_BUSTER
-2450,1000,1000,2000,0,0,0
+2450,5000,1000,2000,0,0,0
 //-- SO_PSYCHIC_WAVE
-2449,2000,1000,5000,0,1000,5000
+2449,9000,1000,5000,0,1000,5000
 //-- SO_CLOUD_KILL
-2450,4000,1000,5000,0,8000,10000
+2450,4000,1000,5000,0,8000:10000:12000:14000:16000,10000
 //-- SO_STRIKING
 2451,1000,1000,2000,0,60000,0
 //-- SO_WARMER
 2452,2000,1000,10000,0,10000:15000;20000:25000:30000,10000:15000:20000:25000:30000
 //-- SO_VACUUM_EXTREME
-2453,1500,1000,5000,0,5000:6000:7000:8000:9000,1000
+2453,2000,1000,5000,0,4000:6000:8000:10000:12000,1000
 //-- SO_VARETYR_SPEAR
-2454,2000,1000,2000,0,0,0
+2454,2000,1000,2000,0,0,3000
 //-- SO_ARULLO
 2455,2000,1000,2000,0,20000,0
 //==========================================
