@@ -116,12 +116,12 @@
 2418,0xdb,   ,  0,11, 300,enemy, 0x800	//WM_SEVERE_RAINSTORM
 2443,0xdc,   ,  0, 1,1000,enemy, 0x008	//SO_FIREWALK
 2444,0xdd,   ,  0, 1,1000,enemy, 0x008	//SO_ELECTRICWALK
-2446,0x86,   ,  0, 7:7:7:9:9,1000,enemy,0x000	//SO_EARTHGRAVE
-2447,0x86,   ,  0, 7:7:7:9:9,1000,enemy,0x000	//SO_DIAMONDDUST
-2449,0x86,   ,  0, 7:7:9:9:11,1000,enemy,0x000	//SO_PSYCHIC_WAVE
-2450,0xe0,   ,  0, 1,1000,enemy,0x000	//SO_CLOUD_KILL
+2446,0x86,   ,  0, 3:3:3:4:4,1000,enemy,0x000	//SO_EARTHGRAVE
+2447,0x86,   ,  0, 3:3:3:4:4,1000,enemy,0x000	//SO_DIAMONDDUST
+2449,0x86,   ,  0, 3:3:4:4:5, 500,enemy,0x000	//SO_PSYCHIC_WAVE
+2450,0xe0,   ,  0, 3, 300,enemy,0x000	//SO_CLOUD_KILL
 2452,0xe4,   ,  0, 7,1000,friend,0x000	//SO_WARMER
-2453,0xeb,   ,  0, 7,1000,enemy,0x000	//SO_VACUUM_EXTREME
+2453,0xeb,   ,  0, 1:1:2:2:3,1000,enemy,0x000	//SO_VACUUM_EXTREME
 2479,0xe5,   ,  0, 1,1000,enemy, 0x000	//GN_THORNS_TRAP
 2482,0xe6,   ,  2, 1, 500,enemy, 0x000	//GN_WALLOFTHORN
 2485,0xe7,   ,  0, 3,1000,enemy, 0x080	//GN_DEMONIC_FIRE
